Stop progress indicator if download is replaced.

Bug: 842781
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I001fbaf3d100e173252aacde7b3cc4f28e28fa31
Reviewed-on: https://chromium-review.googlesource.com/1058378
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558699}
Former-commit-id: 44d4d2b99af0b76adc1c9678b70fc3f89805727e