ios/chrome/browser/download/download_manager_tab_helper_unittest.mm
@@ -189,6 +189,36 @@ TEST_F(DownloadManagerTabHelperTest, NetworkActivityIndicatorOnDone) {
 }
 
 // Tests showing network activity indicator when download is started and hiding
+// when the download task is replaced.
+TEST_F(DownloadManagerTabHelperTest, NetworkActivityIndicatorOnReplacement) {
+  ASSERT_FALSE(delegate_.state);
+  auto task = std::make_unique<web::FakeDownloadTask>(GURL(kUrl), kMimeType);
+
+  web::FakeDownloadTask* task_ptr = task.get();
+  tab_helper()->Download(std::move(task));
+  ASSERT_EQ(0U, [[NetworkActivityIndicatorManager sharedInstance]
+                    numTotalNetworkTasks]);
+  task_ptr->Start(std::make_unique<net::URLFetcherStringWriter>());
+  EXPECT_EQ(1U, [[NetworkActivityIndicatorManager sharedInstance]
+                    numTotalNetworkTasks]);
+
+  // Replace the download task.
+  auto task2 = std::make_unique<web::FakeDownloadTask>(GURL(kUrl), kMimeType);
+  const web::FakeDownloadTask* task2_ptr = task2.get();
+  task2->SetTransitionType(ui::PAGE_TRANSITION_LINK);
+  tab_helper()->Download(std::move(task2));
+
+  EXPECT_EQ(task2_ptr, delegate_.decidingPolicyForDownload);
+  // Ask the delegate to replace the new download.
+  BOOL replaced = [delegate_ decidePolicy:kNewDownloadPolicyReplace];
+  ASSERT_TRUE(replaced);
+
+  // Now network activity indicator is hidden.
+  EXPECT_EQ(0U, [[NetworkActivityIndicatorManager sharedInstance]
+                    numTotalNetworkTasks]);
+}
+
+// Tests showing network activity indicator when download is started and hiding
 // when tab helper is destroyed.
 TEST_F(DownloadManagerTabHelperTest, NetworkActivityIndicatorOnDestruction) {
   ASSERT_FALSE(delegate_.state);
